2004-12-27  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.dg/g77/f90-intrinsic-bit.f: New.

2004-12-27  Mark Mitchell  <mark@codesourcery.com>

	PR c++/19148
	* g++.dg/expr/cond7.C: New test.

2004-12-27  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/g77/select_no_compile.f: Remove.

2004-12-27  Richard Henderson  <rth@redhat.com>

	* gcc.dg/vect/vect-27a.c, gcc.dg/vect/vect-29a.c,
	gcc.dg/vect/vect-48a.c, gcc.dg/vect/vect-56a.c,
	gcc.dg/vect/vect-72a.c, gcc.dg/vect/vect-77a.c: Remove.

2004-12-26  Richard Henderson  <rth@redhat.com>

	* gcc.dg/compat/compat-common.h (CINT, CDBL): Use multiplication
	by 1i instead of token pasting.

2004-12-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR tree-optimization/17578
	* gcc.c-torture/execute/ieee/compare-fp-3.x: Append -fno-trapping-math
	to additional_flags.
	* gcc.c-torture/execute/ieee/compare-fp-4.x: Likewise.

2004-12-25  Richard Henderson  <rth@redhat.com>

	* lib/target-supports.exp (check_effective_target_vect_no_bitwise):
	Remove Alpha.

2004-12-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* gcc.dg/pr17055-1.c (dg-options): Add -fno-common to options on
	hppa*-*-hpux*.
	* gcc.dg/pr17957.c (dg-options): Likewise.
	* gcc.dg/struct-ret-1.c: Add prototype for abort.
	* gcc.dg/tree-ssa/asm-2.c, gcc.dg/tree-ssa/asm-3.c: Use register 1
	instead of 0 on __hppa__.
	* gcc.dg/tree-ssa/loop-1.c (dg-final): Check for five instances of
	"foo,%r" on hppa*-*-*.

2004-12-23  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/19071
	* gfortran.dg/complex_write.f90: New test.
 
2004-12-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17595
	* g++.dg/parse/pragma2.C: New test.

	* g++.dg/opt/temp1.C: Make memcpy actually copy bytes.

2004-12-23  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.dg/empty2.c: Add missing dg-warning.

2004-12-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17413
	* g++.dg/template/local4.C: New test.
	* g++.dg/template/crash19.C: Add dg-error marker.
