@@ -1,8 +1,3 @@
-2004-12-27  Andrew Pinski  <pinskia@physics.uc.edu>
-
-	* trans-expr.c (gfc_conv_cst_int_power): Only check for
-	flag_unsafe_math_optimizations if we have a float type.
-
 2004-12-27  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de> 
 
 	* trans-intrinsic.c (gfc_conv_intrinsic_ishft): Change to
@@ -10,6 +5,16 @@
 	(gfc_conv_intrinsic_ishftc): Convert first argument to at least
 	4 bytes bits.  Convert 2nd and 3rd argument to 4 bytes.  Convert
 	result if width(arg 1) < 4 bytes.  Call fold.
+
+	PR fortran/19032
+	* trans-intrinsic.c (gfc_conv_intrinsic_mod): Update comment
+	in front of function to match the standard.  Correct handling
+	of MODULO.
+
+2004-12-27  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* trans-expr.c (gfc_conv_cst_int_power): Only check for
+	flag_unsafe_math_optimizations if we have a float type.
 
 2004-12-23  Steven G. Kargl  <kargls@comcast.net>
 
